--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="header_logo"><p>mycompany</p></div>
 	<nav>
 		<div class="topnav" id="myTopnav">
-			<a href="google.com">home</a>
+			<a href="index.html">home</a>
 			<a href="google.com">about</a>
 			<a href="index.html">services</a>
 			<a href="index.html">portfolio</a>
